--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 android {
 
     compileSdkVersion 29
-    buildToolsVersion '28.0.3'
+    buildToolsVersion '29.0.3'
 
     defaultConfig {
         applicationId "com.fieldbook.tracker"
@@ -55,29 +55,31 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.exifinterface:exifinterface:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.exifinterface:exifinterface:1.3.2'
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
     implementation "androidx.preference:preference:1.1.1"
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.android.volley:volley:1.1.1'
-    implementation 'com.google.android.material:material:1.3.0-alpha02'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.android:flexbox:2.0.1'
-    implementation 'com.google.firebase:firebase-analytics:17.5.0'
-    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
+    implementation 'com.google.firebase:firebase-analytics:18.0.2'
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
     implementation 'com.google.zxing:core:3.3.0'
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.20"
     implementation 'org.phenoapps:javalib:1.0.5'
     implementation 'org.jsoup:jsoup:1.8.1'
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.10'
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
     implementation 'com.h6ah4i.android.preference:numberpickerprefcompat:1.0.0'
-    implementation 'com.github.MFlisar:changelog:1.1.6'
+    implementation 'com.github.MFlisar:changelog:1.1.7'
     implementation 'com.github.daniel-stoneuk:material-about-library:2.4.2'
+    //noinspection GradleDependency
     implementation "com.mikepenz:aboutlibraries:6.2.3"
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.0'
     implementation 'com.github.ByteHamster:SearchPreference:v2.0.0'
@@ -85,9 +87,7 @@ dependencies {
 
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'org.robolectric:robolectric:4.3.1'
-    testImplementation 'junit:junit:4.13'
-    implementation "androidx.core:core-ktx:1.3.1"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    testImplementation 'junit:junit:4.13.1'
 }
 repositories {
     mavenCentral()
