--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
     repositories {
         google()
         mavenCentral()
@@ -15,6 +16,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
+}
+
 allprojects {
     repositories {
         mavenCentral()
@@ -22,4 +27,13 @@ allprojects {
         maven { url "https://jitpack.io" }
         maven { url 'https://raw.github.com/saki4510t/libcommon/master/repository/' }
     }
+}
+
+ext {
+    extTruthVersion = "1.5.0"
+    coreVersion = "1.5.0"
+    testRulesVersion = "1.5.0"
+    extJUnitVersion = "1.0.0"
+    runnerVersion = "1.5.2"
+    espressoVersion = "3.3.0"
 }
