--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -59,7 +59,7 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        release_name: v${{ steps.bump_version.outputs.new_tag }}
+        release_name: ${{ steps.bump_version.outputs.new_tag }}
         tag: ${{ steps.bump_version.outputs.new_tag }}
         file: app/build/outputs/apk/release/app-release-unsigned-signed.apk
         asset_name: Field-Book-v${{ steps.bump_version.outputs.new_tag }.apk
