--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -161,16 +161,16 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
       
-      - name: Check date for Google Play upload
-        id: date_check
-        run: |
-          CURRENT_DATE=$(date +%m%d)
-          echo "CURRENT_DATE: $CURRENT_DATE"
-          if [ "$CURRENT_DATE" -ge 0415 ] && [ "$CURRENT_DATE" -le 0915 ]; then
-            echo "UPLOAD_TO_PLAY_STORE=false" >> $GITHUB_ENV
-          else
-            echo "UPLOAD_TO_PLAY_STORE=true" >> $GITHUB_ENV
-          fi
+      #- name: Check date for Google Play upload
+      #  id: date_check
+      #  run: |
+      #    CURRENT_DATE=$(date +%m%d)
+      #    echo "CURRENT_DATE: $CURRENT_DATE"
+      #    if [ "$CURRENT_DATE" -ge 0415 ] && [ "$CURRENT_DATE" -le 0915 ]; then
+      #      echo "UPLOAD_TO_PLAY_STORE=false" >> $GITHUB_ENV
+      #    else
+      #      echo "UPLOAD_TO_PLAY_STORE=true" >> $GITHUB_ENV
+      #    fi
     
       #- name: Release APK to Play Store
       #  if: env.UPLOAD_TO_PLAY_STORE == 'true'
